Opened 6 months ago
Closed 6 months ago
#9143 closed bug (fixed)
Deskbar clock doesn't honor locale formatting
| Reported by: | jammi | Owned by: | jscipione |
|---|---|---|---|
| Priority: | low | Milestone: | R1 |
| Component: | Applications/Deskbar | Version: | R1/alpha4 |
| Keywords: | Cc: | ||
| Blocked By: | Blocking: | ||
| Has a Patch: | no | Platform: | All |
Description
The colon is not the right time separator for many locales, including Finland. The Deskbar clock seems to be hardcoded to use a colon instead of the locale separator.
Attachments (1)
Change History (9)
comment:1 Changed 6 months ago by jscipione
- Owner changed from axeld to jscipione
- Status changed from new to assigned
comment:2 follow-up: ↓ 3 Changed 6 months ago by kallisti5
Just to make sure... you are restarting the deskbar after making locale changes... right? Any applications already running will use the previous locale until restarted.
comment:3 in reply to: ↑ 2 ; follow-up: ↓ 4 Changed 6 months ago by jammi
Replying to kallisti5:
Just to make sure... you are restarting the deskbar after making locale changes... right? Any applications already running will use the previous locale until restarted.
Same thing, doesn't make a difference. Quite a lot of reboots later now; nothing's changed.
comment:4 in reply to: ↑ 3 Changed 6 months ago by jscipione
comment:5 Changed 6 months ago by jscipione
- Component changed from Applications/Deskbar to Kits/Locale Kit
Changed 6 months ago by jscipione
Screenshot showing time with localized time seperator in Finnish Locale
comment:6 Changed 6 months ago by jscipione
ICU (and thus the Locale Kit) does not support localized time separators in time format strings, therefore, we are going to have to add support for them ourselves. I made a quick proof-of-concept hack to update the time separator for the Finnish locale only. The real fix is a bit more work. The localized date separator ('/') should probably get the same treatment.
comment:7 Changed 6 months ago by axeld
You don't need to know the separator; if you'd now about it, you still don't know how the order and formatting of the time is done, same for the date. All you have to do is to let the locale kit format the time.
comment:8 Changed 6 months ago by jscipione
- Component changed from Kits/Locale Kit to Applications/Deskbar
- Resolution set to fixed
- Status changed from assigned to closed
Should be fixed in hrev44850

I'll take ownership of this since I was the last to touch the Deskbar clock, although I really can't fix this unless the option get's exposed by the Locale Kit first, and I've had limited success exposing ICU settings via the Locale Kit in the past.